2008-04-06  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidArgumentExceptionDefaultConstructorRule.cs: New. Rule to 
	check if exception derived from ArgumentException are created with 
	some useful information (i.e. not the default constructor).
	* Gendarme.Rules.Exceptions.mdp: Add rule to MD project file.
	* Makefile.am: Add rule and tests to the build.

2008-04-06  Sebastien Pouliot  <sebastien@ximian.com>

	* DontDestroyStackTraceRule.cs: Rename to DoNotDestroyStackTraceRule.
	Rename ExecutionPath to *Collection.

2008-02-16  Sebastien Pouliot  <sebastien@ximian.com> 

	* DontSwallowErrorsCatchingNonspecificExceptionsRule.cs: Rename
	parameter to match interface parameter name.

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com> 

	* DoNotDestroyStackTraceRule.cs: (renamed from DontDestroyStackTrace.cs)
	* DontSwallowErrorsCatchingNonspecificExceptionsRule.cs:
		Updated rules wrt framework changes.
	* Makefile.am: Adjusted for file name changes.

2008-01-11  Sebastien Pouliot  <sebastien@ximian.com> 

	* DontDestroyStackTrace.cs: Use new Location ctors. Change some 
	methods to static.
	* DontSwallowErrorsCatchingNonspecificExceptionsRule.cs: Don't 
	create MessageCollection until needed. Use new Location ctors. Change
	a method to static.

2007-11-29  Sebastien Pouliot  <sebastien@ximian.com>

	* DontDestroyStackTrace.cs: Don't use a static field (it fails a rule)
	as the rules are reusable and created only a single time by runners.

2007-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* Gendarme.Rules.Exceptions.mdp: Update project file.

2007-10-04  Nestor Salceda  <nestor.salceda@gmail.com>

	* Gendarme.Rules.Exceptions.mdp, Test.Rules.Exceptions.mdp:  Added
	DontSwallowErrorsCatchingNonspecificExceptions rule, and the respective
	unit test to the MonoDevelop project file.

2007-09-29  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* Gendarme.Rules.Exceptions.xml.in:  Added Uri for
	DontSwallowErrorsCatchingNonspecificExceptionsRule.
